adding code to make one datatable of all links

--- a/00_get_data.ipynb
+++ b/00_get_data.ipynb
@@ -12,7 +12,8 @@
     "from selenium import webdriver\n",
     "import pickle\n",
     "from bs4 import BeautifulSoup\n",
-    "from library.utilities import *"
+    "from library.utilities import *\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -35,13 +36,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Get the links"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
+    "# FOX\n",
+    "\n",
     "# kelly\n",
     "url = 'http://www.foxnews.com/shows/the-kelly-file/transcripts.html'\n",
     "pages = range(2, 70)\n",
@@ -50,15 +60,20 @@
     "\n",
     "# oreilly\n",
     "base_url = 'http://www.foxnews.com/shows/the-oreilly-factor/transcripts.html'\n",
-    "pages = range(0, 700, 10)\n",
+    "pages = range(0, 20, 10) #700\n",
     "pickle_dst = 'data/oreilly/links_list2.pickle'\n",
-    "#get_fox_links(base_url, pages, pickle_dst)\n",
+    "get_fox_links(base_url, pages, pickle_dst)\n",
+    "#http://www.foxnews.com/transcript/2016/05/05/trump-on-potential-vp-picks-have-lot-candidates/\n",
     "\n",
     "# hannity\n",
     "base_url = 'http://www.foxnews.com/on-air/hannity/transcripts'\n",
     "pages = range(1, 70)\n",
     "pickle_dst = 'data/hannity/links_list.pickle'\n",
     "#get_fox_links(base_url, pages, pickle_dst)\n",
+    "\n",
+    "####################################################################\n",
+    "\n",
+    "# CNN\n",
     "\n",
     "# cooper ... just go to transcripts page, save entire webpage, then extract targeted links\n",
     "html_file = 'data/cooper/cooper.htm'\n",
@@ -77,61 +92,9 @@
     "#blitzer_links = ['http://www.cnn.com' + x for x in half_links]\n",
     "#pickle.dump(blitzer_links, open('data/blitzer/blitzer.pickle', \"wb\"))\n",
     "\n",
-    "# MSNBC links\n",
-    "years = range(2015, 2017); years\n",
-    "months = range(1, 13); months\n",
-    "pages = []\n",
-    "for year in years:\n",
-    "    for month in months:\n",
-    "        page = str(year) + '/' + str(month)\n",
-    "        pages.append(page)\n",
-    "pages = pages[:-4]; pages\n",
+    "####################################################################\n",
     "\n",
-    "filter_str = 'http://www.msnbc.com/transcripts/rachel-maddow-show/2'\n",
-    "# maddow\n",
-    "\n",
-    "#, odonnel, hayes\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['2015/1',\n",
-       " '2015/2',\n",
-       " '2015/3',\n",
-       " '2015/4',\n",
-       " '2015/5',\n",
-       " '2015/6',\n",
-       " '2015/7',\n",
-       " '2015/8',\n",
-       " '2015/9',\n",
-       " '2015/10',\n",
-       " '2015/11',\n",
-       " '2015/12',\n",
-       " '2016/1',\n",
-       " '2016/2',\n",
-       " '2016/3',\n",
-       " '2016/4',\n",
-       " '2016/5',\n",
-       " '2016/6',\n",
-       " '2016/7',\n",
-       " '2016/8']"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\n",
+    "# MSNBC\n",
     "years = range(2015, 2017); years\n",
     "months = range(1, 13); months\n",
     "pages = []\n",
@@ -140,10 +103,26 @@
     "        page = str(year) + '/' + str(month)\n",
     "        pages.append(page)\n",
     "pages = pages[:-4]\n",
+    "\n",
+    "# maddow\n",
     "base_url = 'http://www.msnbc.com/transcripts/rachel-maddow-show/'\n",
-    "filter_string = base_url + '2'\n",
+    "filter_str = '/transcripts/rachel-maddow-show/2'\n",
     "pickle_dst = 'data/maddow/links_list.pickle'\n",
-    "get_msnbc_links(base_url, pickle_dst, filter_str, pages)"
+    "#get_msnbc_links(base_url, pickle_dst, pages)\n",
+    "\n",
+    "\n",
+    "# odonnel\n",
+    "base_url = 'http://www.msnbc.com/transcripts/the-last-word/'\n",
+    "filter_str = '/transcripts/the-last-word/2'\n",
+    "pickle_dst = 'data/odonnell/links_list.pickle'\n",
+    "#get_msnbc_links(base_url, pickle_dst, pages)\n",
+    "\n",
+    "\n",
+    "# hayes\n",
+    "base_url = 'http://www.msnbc.com/transcripts/all-in/'\n",
+    "filter_str = '/transcripts/all-in/2'\n",
+    "pickle_dst = 'data/hayes/links_list.pickle'\n",
+    "#get_msnbc_links(base_url, pickle_dst, pages)"
    ]
   },
   {
@@ -154,9 +133,28 @@
    },
    "outputs": [],
    "source": [
-    "f = urllib2.urlopen(url)\n",
-    "f.geturl()\n",
-    "soup = BeautifulSoup(f, 'lxml')"
+    "len(get_pickle('data/oreilly/links_list_old.pickle')), len(get_pickle('data/oreilly/links_list_old2.pickle'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Make datatable of all the links"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# fox table of links\n",
+    "fox_hosts = ['kelly', 'oreilly', 'hannity']\n",
+    "fox_to_df(fox_hosts)"
    ]
   },
   {
@@ -167,7 +165,7 @@
    },
    "outputs": [],
    "source": [
-    "soup"
+    "datatable.dropna()"
    ]
   },
   {
