--- a/extract_1.ipynb
+++ b/extract_1.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "import os\n",
     "import pickle\n",
-    "from library.utilities import *\n",
+    "from library.extract import *\n",
     "import pandas as pd"
    ]
   },
